Reafactoring, fixes and adding tests.